IProductService soyut sınıfı olusturuldu ve persistence katmanında concrete nesnesi oluşturuldu.

--- a/PttAppAPI.Application/PttAppAPI.Application.csproj
+++ b/PttAppAPI.Application/PttAppAPI.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PttAppAPI.Domain\PttAppAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
