--- a/PttAppAPI/PttAppAPI.API.csproj
+++ b/PttAppAPI/PttAppAPI.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PttAppAPI.Application\PttAppAPI.Application.csproj" />
+  </ItemGroup>
+
 </Project>
