Extention fonksiyonları IoC konteynıra tanımlamak için registration metodu tanımlandı.

--- a/PttAppAPI/PttAppAPI.API.csproj
+++ b/PttAppAPI/PttAppAPI.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PttAppAPI.Application\PttAppAPI.Application.csproj" />
+    <ProjectReference Include="..\PttAppAPI.Persistence\PttAppAPI.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
