--- a/PttAppAPI.Persistence/PttAppAPI.Persistence.csproj
+++ b/PttAppAPI.Persistence/PttAppAPI.Persistence.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PttAppAPI.Application\PttAppAPI.Application.csproj" />
   </ItemGroup>
 
