Database connection string  cod içerisinden appsettings.json dosyasına taşındı.

--- a/PttAppAPI.Persistence/PttAppAPI.Persistence.csproj
+++ b/PttAppAPI.Persistence/PttAppAPI.Persistence.csproj
@@ -17,15 +17,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PttAppAPI.Application\PttAppAPI.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contexts\" />
   </ItemGroup>
 
 </Project>
