--- a/PttAppAPI/appsettings.json
+++ b/PttAppAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "UseSqlServer": "server=.;database=PttAppDatabase;trusted_connection=true;"
+  }
 }
