Migrations yeniden oluşturuldu .Sql connection string codun içinden taşındı.

--- a/PttAppAPI/appsettings.json
+++ b/PttAppAPI/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "UseSqlServer": "server=.;database=PttAppDatabase;trusted_connection=true;"
+    "SqlServer": "server=.;database=PttAppDatabase;trusted_connection=true;"
   }
 }
