MainCategory için read-write repository interface'leri ouşturuldu.

--- a/PttAppAPI.Application/PttAppAPI.Application.csproj
+++ b/PttAppAPI.Application/PttAppAPI.Application.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\PttAppAPI.Domain\PttAppAPI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\SubOfSubCategory\" />
+    <Folder Include="Repositories\SubCategory\" />
+  </ItemGroup>
+
 </Project>
