--- a/PttAppAPI.Application/PttAppAPI.Application.csproj
+++ b/PttAppAPI.Application/PttAppAPI.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\NewFolder\**" />
+    <EmbeddedResource Remove="Repositories\NewFolder\**" />
+    <None Remove="Repositories\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
   </ItemGroup>
 
@@ -16,7 +22,6 @@
 
   <ItemGroup>
     <Folder Include="Repositories\SubOfSubCategory\" />
-    <Folder Include="Repositories\SubCategory\" />
   </ItemGroup>
 
 </Project>
