--- a/PttAppAPI.Application/PttAppAPI.Application.csproj
+++ b/PttAppAPI.Application/PttAppAPI.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,21 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Repositories\NewFolder\**" />
-    <EmbeddedResource Remove="Repositories\NewFolder\**" />
-    <None Remove="Repositories\NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PttAppAPI.Domain\PttAppAPI.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repositories\SubOfSubCategory\" />
   </ItemGroup>
 
 </Project>
