--- a/PttAppAPI.Persistence/PttAppAPI.Persistence.csproj
+++ b/PttAppAPI.Persistence/PttAppAPI.Persistence.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\PttAppAPI.Application\PttAppAPI.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\NewFolder\" />
+  </ItemGroup>
+
 </Project>
