Connecting String Düzenlendi.

--- a/PttAppAPI/appsettings.json
+++ b/PttAppAPI/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SqlServer": "server=.;database=PttAppDatabase;trusted_connection=true;"
+    "SqlServer": "server=.;database=PttAppDatabase;trusted_connection=true; User Id=emre;Password=emre77;"
   }
 }
