Yeni tablo colonları oluşturmak için migration oluşturuldu.

--- a/PttAppAPI/appsettings.json
+++ b/PttAppAPI/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
 
-  "ConnectionStrings": {
-    "SqlServer": "server=.;database=PttAppDatabase;trusted_connection=true; User Id=emre;Password=emre77;"
-  }
+  //"ConnectionStrings": {
+  //  "SqlServer": "server=.;database=PttAppDatabase;trusted_connection=true; User Id=emre;Password=emre77;"
+  //}
 }
